fix positioning on smaller windows

--- a/main.scss
+++ b/main.scss
@@ -8,8 +8,8 @@ html {
   font-size: 24px;
   background: url("/img/background.jpg") no-repeat center center fixed;
   background-size: cover;
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
 
   .wrapper {
     border-radius: 8px;
